<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.ProgressesFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_limits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_gap"
                app:cardCornerRadius="@dimen/default_card_corner_radius"
                app:cardElevation="@dimen/default_card_elevation">

                <LinearLayout
                    android:id="@+id/layout_limits"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/small_gap"
                    android:paddingLeft="@dimen/small_gap"
                    android:paddingRight="@dimen/small_gap">

                    <TextView
                        android:id="@+id/label_limits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/very_small_gap"
                        android:text="@string/limits_card_title" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_limits"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:layout_marginBottom="@dimen/very_large_gap"
                app:cardCornerRadius="@dimen/default_card_corner_radius"
                app:cardElevation="@dimen/default_card_elevation">

                <LinearLayout
                    android:id="@+id/layout_targets"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/small_gap"
                    android:paddingLeft="@dimen/small_gap"
                    android:paddingRight="@dimen/small_gap">

                    <TextView
                        android:id="@+id/label_targets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/very_small_gap"
                        android:text="@string/targets_card_title" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_targets"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/button_new_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/small_gap"
        android:background="@drawable/add_button_background"
        android:padding="@dimen/small_gap"
        android:text="@string/new_progress_button_text"
        android:textColor="@color/pureWhite"
        android:elevation="@dimen/default_card_elevation" />

</FrameLayout>