<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@color/background"
    android:background="@color/background"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_gap"
            app:cardCornerRadius="@dimen/default_card_corner_radius"
            app:cardElevation="@dimen/default_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/small_gap">

                <TextView
                    android:id="@+id/label_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_card_title" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginRight="@dimen/small_gap"
            android:layout_marginBottom="@dimen/small_gap"
            app:cardCornerRadius="@dimen/default_card_corner_radius"
            app:cardElevation="@dimen/default_card_elevation">

            <LinearLayout
                android:id="@+id/layout_relevant_limits"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/small_gap"
                android:paddingTop="@dimen/small_gap"
                android:paddingRight="@dimen/small_gap">

                <TextView
                    android:id="@+id/label_relevant_limits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/very_small_gap"
                    android:text="@string/relevant_limits_card_title" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_relevant_limits"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginRight="@dimen/small_gap"
            android:layout_marginBottom="@dimen/very_large_gap"
            app:cardCornerRadius="@dimen/default_card_corner_radius"
            app:cardElevation="@dimen/default_card_elevation">

            <LinearLayout
                android:id="@+id/layout_relevant_targets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/small_gap"
                android:paddingTop="@dimen/small_gap"
                android:paddingRight="@dimen/small_gap">

                <TextView
                    android:id="@+id/label_relevant_targets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/very_small_gap"
                    android:text="@string/relevant_targets_card_title" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_relevant_targets"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>